--- a/src/dashboard/Dashboard.css
+++ b/src/dashboard/Dashboard.css
@@ -1,3 +1,63 @@
+
+*{
+    overflow: hidden;
+}
+
 .dashboard{
     background-color: rgb(18, 18, 18);
+    display: flex;
+    flex-direction: row;
+}
+
+
+.dashboard-card{
+    margin-top: 17px;
+    background-color: #202123;
+    width: 1615px;
+    height: 100px;
+    border-radius: 10px;
+    
+}
+
+.dashboard-card h2{
+    color: #E0E0E0;
+    margin-left: 15px;
+    margin-top: 18px;
+}
+
+.dashboard-card p{
+    color: #7e7e7e;
+    margin-left: 15px;
+}
+
+.dashboard-input{
+    margin-top: 10px;
+    background-color: #202123;
+    width: 100%;
+    height: 90px;
+    border-radius: 10px;
+}
+
+.dashboard-settings{
+    margin-top: 10px;
+    background-color: #202123;
+    width: 1615px;
+    height: 640px;
+    border-radius: 10px;
+}
+
+.dashboard-generate-button{
+    margin-left: 5px;
+    margin-top: 12px;
+    background-color: #202123;
+    width: 1600px;
+    height: 44px;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 1.2rem;
+    color: #E0E0E0;
+}
+
+.dashboard-generate-button p{
+    margin-top: 4px;
 }
