--- a/src/dashboard/Dashboard.css
+++ b/src/dashboard/Dashboard.css
@@ -13,7 +13,7 @@
 .dashboard-card{
     margin-top: 17px;
     background-color: #202123;
-    width: 1615px;
+    width: 100%;
     height: 100px;
     border-radius: 10px;
     
@@ -41,23 +41,37 @@
 .dashboard-settings{
     margin-top: 10px;
     background-color: #202123;
-    width: 1615px;
+    width: 100%;
     height: 640px;
     border-radius: 10px;
 }
 
 .dashboard-generate-button{
-    margin-left: 5px;
+    display: flex;
     margin-top: 12px;
     background-color: #202123;
-    width: 1600px;
-    height: 44px;
+    width: 83.5vw;
+    height: 51px;
     border-radius: 10px;
     text-align: center;
+    justify-content: center;
     font-size: 1.2rem;
     color: #E0E0E0;
 }
 
 .dashboard-generate-button p{
-    margin-top: 4px;
+    margin-top: 9px;
+}
+
+@media (max-width: 1024px) {
+    .sidebar{
+        display: none;
+    }
+    .dashboard-main{
+        margin-left: 10px;
+        min-width: 1000px;
+    }
+    .dashboard-generate-button{
+        width: 100vw;
+    }
 }
