sidebar buttons and icons inside them applied

--- a/src/dashboard/Dashboard.css
+++ b/src/dashboard/Dashboard.css
@@ -49,7 +49,7 @@
 .dashboard-generate-button{
     display: flex;
     margin-top: 12px;
-    background-color: #202123;
+    background-color: #222a3d;
     width: 83.5vw;
     height: 51px;
     border-radius: 10px;
