--- a/src/dashboard/Dashboard.css
+++ b/src/dashboard/Dashboard.css
@@ -38,6 +38,13 @@
     border-radius: 10px;
 }
 
+.dashboard-input img {
+    width: 40px;
+    height: 40px;
+    margin-top: 25px;
+    margin-left: 5px;
+}
+
 .dashboard-settings{
     margin-top: 10px;
     background-color: #202123;
