--- a/frontend/src/dashboard/components/Create.css
+++ b/frontend/src/dashboard/components/Create.css
@@ -18,7 +18,20 @@
     margin-left: 15px;
     margin-top: 18px;
 }
+.dashboard-input h2{
+    color: #E0E0E0;
+    margin-left: 8px;
+    margin-top: 10px;
+}
 
+
+
+.dashboard-title-input h2{
+    color: #e0e0e0ec;
+    margin-top: 10px;
+    margin-left: 18px
+
+}
 .dashboard-card p{
     color: #7e7e7e;
     margin-left: 15px;
@@ -33,6 +46,31 @@
     border-radius: 10px;
     padding: 0 15px;
     gap: 10px; 
+}
+
+.dashboard-title-input{
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+    background-color: #202123;
+    width: 100%;
+    height: 120px;
+    border-radius: 10px;
+    gap: -40px;
+}
+
+.dashboard-title-input-input{
+    padding-bottom: 0px;
+    height: 40px;
+    background-color: #2a2b2d; /* Hafif gri arka plan */
+    border: none;
+    border-radius: 5px;
+    color: #E0E0E0;
+    font-size: 1rem;
+    padding-left: 10px;
+    width: 98%;
+    margin-left: 15px;
+    margin-top: 10px;
 }
 
 .dashboard-input img {
@@ -62,12 +100,17 @@
 }
 
 .dashboard-file-input {
-    
+    display: flex;
     color: #E0E0E0;
     font-size: 0.9rem;
-    margin-top: 33px;
-    margin-right: -50px;
-}
+    background-color: #333;
+    border: 2px solid #E0E0E0;
+    border-radius: 5px;
+    width: 150px;
+    height: 60px;
+    margin-top: 15px;
+    }
+
 
 .dashboard-settings{
     margin-top: 10px;
