--- a/frontend/src/intro/Intro.css
+++ b/frontend/src/intro/Intro.css
@@ -260,7 +260,6 @@ body {
   line-height: 26px;
   letter-spacing: -0.0001em;
   color: rgba(255, 255, 255, 0.7);
-  margin-top: 5px;
 }
 
 /* User Friendly section (Right Panel) */
@@ -320,7 +319,7 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: center;
+  object-position: top;
 }
 
 .gradient-overlay {
@@ -335,10 +334,8 @@ body {
 /* Section Colors */
 .navbar { 
   background-color: rgb(11, 52, 90); }
-.pitcure-text { background-color: rgb(201, 48, 193); }
+
 .information { background-color: rgb(26, 145, 26); }
-.waitlist { background-color: rgb(83, 23, 196); }
-.footer { background-color: rgba(255, 255, 255, 0.171); }
 
 /* Animations */
 @keyframes streak {
@@ -366,7 +363,7 @@ body {
   animation: streak 6s infinite ease-in-out;
   filter: blur(1px);
   margin: 1rem 0;
-  margin-top: -40px;
+  margin-top: -55px;
 }
 
 .light-streak-2 {
@@ -416,3 +413,12 @@ body {
   z-index: 2;
 }
 
+
+
+.pitcure-text{
+  margin-top: -30px;
+}
+
+.footer{
+  color: white;
+}
