--- a/frontend/src/intro/Intro.css
+++ b/frontend/src/intro/Intro.css
@@ -104,7 +104,6 @@ body {
   padding: 2px 10px;
   font-size: 12px;
 }
-
 .welcome-text {
   font-weight: 500;
   font-size: 82px;
@@ -122,6 +121,31 @@ body {
   font-size: 24px;
   margin-bottom: 40px;
   width: 900px;
+}
+
+/* mobil için */
+@media (max-width: 768px) {
+  .welcome-text {
+    font-size: 48px;
+    line-height: 50px;
+  }
+
+  .welcome-sub-text {
+    font-size: 18px;
+    width: 90%;
+  }
+}
+
+@media (max-width: 480px) {
+  .welcome-text {
+    font-size: 36px;
+    line-height: 40px;
+  }
+
+  .welcome-sub-text {
+    font-size: 16px;
+    width: 90%;
+  }
 }
 
 .waitlist-btn {
@@ -629,7 +653,28 @@ body {
   z-index: 2;
 }
 
+/* Mobile düzeltmeleri */
+@media (max-width: 768px) {
+  .light-streak {
+    filter: blur(0.5px);
+  }
 
+  .introduction::after {
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+  }
+}
+
+@media (max-width: 480px) {
+  .light-streak {
+    filter: blur(0.3px);
+  }
+
+  .introduction::after {
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
+  }
+}
 
 .pitcure-text{
   margin-top: -30px;
