--- a/frontend/src/intro/Intro.css
+++ b/frontend/src/intro/Intro.css
@@ -66,7 +66,7 @@ body {
   position: absolute;
   width: 825px;
   height: 825px;
-  background: #602A9A;
+  background: #212ee4;
   filter: blur(267px);
   top: 50%;
   left: 50%;
@@ -99,7 +99,7 @@ body {
 }
 
 .new {
-  background: #9855FF;
+  background: #5566ff;
   border-radius: 40px;
   padding: 2px 10px;
   font-size: 12px;
@@ -109,7 +109,7 @@ body {
   font-size: 82px;
   line-height: 84px;
   letter-spacing: -0.0506em;
-  background: linear-gradient(180deg, #FFFFFF 54.17%, #B372CF 100%);
+  background: linear-gradient(180deg, #FFFFFF 54.17%, #8072cf 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
@@ -167,7 +167,7 @@ body {
   max-width: 1200px;
   max-height: 600px;
   margin: 2rem auto;
-  border: solid 5px #490966;
+  border: solid 5px #120966;
   border-radius: 25px;
   z-index: 10;
 }
@@ -176,6 +176,8 @@ body {
   max-width: 100%;
   max-height: 100%;
   object-fit: contain;
+  transform: scale(1.02); /* Scales the image by 103% */
+  transform-origin: center; 
 }
 
 
@@ -189,9 +191,9 @@ body {
     to top,
     rgba(96, 42, 154, 0) 0%,
     rgba(96, 42, 154, 0) 20%,
-    rgba(96, 42, 154, 0) 30%,
-    rgba(96, 42, 154, 0) 40%,
-    rgba(96, 42, 154, 0.315) 90%
+    rgba(59, 42, 154, 0) 30%,
+    rgba(59, 42, 154, 0) 40%,
+    rgba(59, 42, 154, 0.315) 90%
   );
   
 }
